messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  namespace: messaging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: messaging-app.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
      - path: /admin/?(.*)
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
